--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="container header-content">
         <a href="./index.html" class="logo" aria-label="SLFA Home">
-          <img src="./images/LOGO_SLFA.png" alt="LOGO"
+          <img src="./images/LOGO_SLFA.jpg" alt="LOGO"
         /></a>
         <nav class="nav" role="navigation" aria-label="Main Navigation">
           <a href="./index.html">Home</a>
@@ -75,18 +75,18 @@
         <div id="team" role="list">
           <div class="team-row" role="listitem">
             <img src="./images/coach.jpg" alt="Mr Augustine Bangura" />
-            <h6>Mr Augustine Bangura</h6>
+            <h6>Augustine Bangura</h6>
             <span>Technical Director</span>
           </div>
 
           <div class="team-row" role="listitem">
             <img src="./images/President.jpeg" alt="Mr Umaru Sillah" />
-            <h6>Mr Umaru Sillah</h6>
+            <h6>Umaru Sillah</h6>
             <span>President</span>
           </div>
 
           <div class="team-row" role="listitem">
-            <img src="./images/Vice president.jpeg" alt="Babadi Kamara" />
+            <img src="./images/Vice president.jpg" alt="Babadi Kamara" />
             <h6>Babadi Kamara</h6>
             <span>Vice President</span>
           </div>
