--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container header-content">
         <a href="./index.html" class="logo" aria-label="SLFA Home">
-          <img src="./images/LOGO_SLFA.jpg" alt="SLFA Logo" />
+          <img src="./images/LOGO_SLFA.png" alt="SLFA Logo" />
         </a>
         <nav class="nav" role="navigation" aria-label="Main Navigation">
           <a href="./index.html">Home</a>
