--- a/players.html
+++ b/players.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="container header-content">
         <a href="./index.html" class="logo" aria-label="SLFA Home">
-          <img src="./images/LOGO_SLFA.jpg" alt="LOGO"
+          <img src="./images/LOGO_SLFA.png" alt="LOGO"
         /></a>
         <nav class="nav" role="navigation" aria-label="Main Navigation">
           <a href="./index.html">Home</a>
